Fix toolbarContainer white space issue

--- a/platform-ui-skin/src/main/webapp/skin/less/platform/skin/enterprise.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/platform/skin/enterprise.less
@@ -300,7 +300,6 @@
 /*            TOOLBAR                  */
 
 #UIPortalApplication .UIToolbarContainer {
-  left: 250px;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.16), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
 
   &.UIToolbarContainerLight [class^="uiIconPLF24x24"] {
